--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -40,5 +40,27 @@
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {background-color: #ddd}
 
+.dropdown-content1 {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  margin-top: 15%;
+  float: 0;
+  right: 0;
+}
+
+/* Links inside the dropdown */
+.dropdown-content1 a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+/* Change color of dropdown links on hover */
+.dropdown-content1 a:hover {background-color: #ddd}
+
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
