--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -21,7 +21,9 @@
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
-  display: none;
+  #display: none;
+  transform: scaleY(0);
+  transform-origin: 0,0;
   position: absolute;
   background-color: #f1f1f1;
   min-width: 160px;
@@ -63,4 +65,4 @@
 .dropdown-content1 a:hover {background-color: #ddd}
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
+.show {display:block; transform: scaleY(1.0);}
