Добавлена кнопка "Добавленные симптомы"

--- a/css/simptomes.css
+++ b/css/simptomes.css
@@ -33,6 +33,7 @@ body{
 	margin-right: 5px;
 }
 .simptomes div{
+	user-select: none;
 	padding: 3px;
 	border-radius: 10px;
 	display: flex;
@@ -41,4 +42,33 @@ body{
 .simptomes_shown{
 	display: none !important;
 	border: 100px solid black;
+}
+.added_simptomes{
+	background: none;
+	margin-top: 10px;
+	font-size: 12pt;
+	border: 2px solid var(--accent);
+	padding: 5px;
+}
+#Added_simptomes_window{
+	display: none;
+	opacity: 0;
+	transition: .3s;
+	position: absolute;
+	width: 90vw;
+	height: 90vh;
+	background: #fff;
+	box-shadow: 0 0 100px rgba(0,0,0,1)
+}
+.button_for_close:hover, .button_for_close:focus{
+	transform: rotate(180deg);
+	transition: .3s;
+	color: var(--accent3);
+}
+.button_for_close{
+	transition: .3s;
+	color: var(--accent4);
+	position: absolute;
+	right: 0;
+	font-size: 36pt;
 }
