--- a/css/simptomes.css
+++ b/css/simptomes.css
@@ -72,3 +72,26 @@ body{
 	right: 0;
 	font-size: 36pt;
 }
+.block_with_simptome{
+	display: flex;
+	padding-left: 10px;
+	justify-content: space-between;
+	border-bottom: 1px solid black;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+.text_for_added_simptome{
+	color: black;
+	font-size: 20pt;
+}
+.button_for_remove{
+	font-size: 25pt;
+	margin-left: 50px;
+	color: var(--accent2);
+}
+#spisok_blyat{
+	margin-top: 50px;
+	overflow-x: scroll;
+	#background: red;
+	height: calc(100% - 50px);
+}
