--- a/css/simptomes.css
+++ b/css/simptomes.css
@@ -52,13 +52,24 @@ body{
 }
 #Added_simptomes_window{
 	display: none;
-	opacity: 0;
+	opacity: 1;
 	transition: .3s;
 	position: absolute;
 	width: 90vw;
 	height: 90vh;
+	z-index: 3;
 	background: #fff;
-	box-shadow: 0 0 100px rgba(0,0,0,1)
+	box-shadow: 0 0 100px rgba(0,0,0,1);
+	animation: slideuptocenter .4s ease-in-out;
+	transform-origin: 50% 0;
+}
+@keyframes slideuptocenter{
+	0%{transform: scale(0);display: block;},
+	100%{transform: translateY(1);}
+}
+@keyframes slidecentertoup{
+	0%{transform: ;},
+	100%{transform: translateY(-100vh);}
 }
 .button_for_close:hover, .button_for_close:focus{
 	transform: rotate(180deg);
@@ -83,15 +94,84 @@ body{
 .text_for_added_simptome{
 	color: black;
 	font-size: 20pt;
+	width: 90%;
 }
 .button_for_remove{
 	font-size: 25pt;
 	margin-left: 50px;
 	color: var(--accent2);
+	width: 10%;
 }
 #spisok_blyat{
 	margin-top: 50px;
 	overflow-x: scroll;
 	#background: red;
 	height: calc(100% - 50px);
+}
+.block_with_list_bolezni{
+	position: absolute;
+	width: 100%;
+	bottom: 0;
+	height: 70%;
+	overflow-y: scroll;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+	border-top: 3px solid black;
+	background: #e6e6e6;
+}
+#bolezni_list{
+	margin-top: 40px;
+	height: calc(100% - 40px);
+}
+.block_with_bolezn{
+	display: flex;
+	border-bottom: 1px solid black;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	justify-content: space-between;
+	width: 100%;
+}
+.text_bolezn{
+	display: flex;
+	width: 90%;
+	padding-left: 10px;
+	flex-direction: column;
+}
+.bolezn_name{
+	font-size: 20pt;
+}
+.bolezn_simptomes{
+	font-size: 10pt;
+}
+.bolezn_info{
+	font-size: 25pt;
+	width: 10%;
+	align-items: center;
+}
+.header_for_info_window{
+	display: flex;
+	width: 100%;
+	min-height: 10%;
+	justify-content: space-between;
+}
+.header_for_info_window ion-icon{
+	width: 10%;
+}
+.header_for_info_window div{
+	font-size: 19pt;
+	padding: 10px 0 0 10px;
+	width: 90%;
+}
+#Info_window{
+	display: none;
+	position: absolute;
+	width: 90%;
+	height: 90%;
+	background: white;
+	border: 3px solid black;
+	z-index: 2;
+	box-shadow: 0 0 100px rgba(0,0,0,1);
+}
+#info_text{
+	padding-left: 10px;
 }
