--- a/css/simptomes.css
+++ b/css/simptomes.css
@@ -52,6 +52,7 @@ body{
 }
 #Added_simptomes_window{
 	display: none;
+	margin: 5%;
 	opacity: 1;
 	transition: .3s;
 	position: absolute;
@@ -63,14 +64,7 @@ body{
 	animation: slideuptocenter .4s ease-in-out;
 	transform-origin: 50% 0;
 }
-@keyframes slideuptocenter{
-	0%{transform: scale(0);display: block;},
-	100%{transform: translateY(1);}
-}
-@keyframes slidecentertoup{
-	0%{transform: ;},
-	100%{transform: translateY(-100vh);}
-}
+
 .button_for_close:hover, .button_for_close:focus{
 	transform: rotate(180deg);
 	transition: .3s;
@@ -108,16 +102,27 @@ body{
 	#background: red;
 	height: calc(100% - 50px);
 }
-.block_with_list_bolezni{
+#block_with_list_bolezni{
 	position: absolute;
 	width: 100%;
 	bottom: 0;
-	height: 70%;
+	min-height: 25vh;
+	max-height: 65vh;
+	height: 25vh;
+	transition: .4s;
 	overflow-y: scroll;
 	border-top-left-radius: 20px;
 	border-top-right-radius: 20px;
 	border-top: 3px solid black;
 	background: #e6e6e6;
+}
+@keyframes unpack_bolezni{
+	from{height: 25vh;}
+	to{height: 65vh;}
+}
+@keyframes pack_bolezni{
+	from{height: 65vh;}
+	to{height: 25vh;}
 }
 #bolezni_list{
 	margin-top: 40px;
@@ -163,6 +168,7 @@ body{
 	width: 90%;
 }
 #Info_window{
+	margin: 5%;
 	display: none;
 	position: absolute;
 	width: 90%;
@@ -174,4 +180,22 @@ body{
 }
 #info_text{
 	padding-left: 10px;
+	padding-right: 10px;
+	height: 90%;
+	overflow-y: scroll;
+}
+@keyframes slideuptocenter{
+	0%{transform: translateY(-100vh);display: block; opacity: 0;}
+	100%{transform: translateY(0); opacity: 1;}
+}
+@keyframes slidecentertoup{
+	0%{transform: translateY(0);}
+	100%{transform: translateY(-100vh); opacity: 0;}
+}
+@keyframes scale1{
+	0%{transform: scaleY(0); opacity: 0;}
+	100%{transform: scale(1); opacity: 1;}
+}@keyframes scale0{
+	0%{transform: scaleY(1); opacity: 1;}
+	100%{transform: scale(0); opacity: 0;}
 }
