--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body{
 #	font-family: 'Exo 2', sans-serif;
 }
 .popup_message{
+	z-index: 10;
 	position: absolute;
 	height: 7vh;
 	width: 95vw;
@@ -39,6 +40,7 @@ body{
 	100%{transform: translateY(-200px);}
 }
 .popup_dur{
+	z-index: 10;
 	position: absolute;
 	height: 4px;
 	width: 100%;
@@ -51,10 +53,16 @@ body{
 	85%{width: 0%;}
 }
 .popup_text{
+	z-index: 10;
+	line-height: 14pt;
 	color: white;
 	font-size: 14pt;
-	padding-bottom: 50px;
+	margin-bottom: 50px;
 	text-align: center;
 	width: 100%;
 	height: 100%;
+}
+
+#Settings a{
+	font-size: 14pt;
 }
