--- a/css/simptomes.css
+++ b/css/simptomes.css
@@ -29,6 +29,19 @@ body{
 	#padding-left: 10%;
 	font-size: 14pt;
 }
+.simptomes::-webkit-scrollbar-thumb{
+	border-bottom: 2px solid black;
+	background: transparent;
+	border-radius: 10px;
+}
+.simptomes::-webkit-scrollbar-track{
+	margin-top: 1px;
+}
+.simptomes::-webkit-scrollbar{
+	background: transparent;
+	margin-top: 10px;
+	height: 4px;
+}
 .simptomes div:not(:last-child){
 	margin-right: 5px;
 }
@@ -106,9 +119,7 @@ body{
 	position: absolute;
 	width: 100%;
 	bottom: 0;
-	min-height: 25vh;
-	max-height: 65vh;
-	height: 25vh;
+	height: 5vh;
 	transition: .4s;
 	overflow-y: scroll;
 	border-top-left-radius: 20px;
@@ -117,12 +128,12 @@ body{
 	background: #e6e6e6;
 }
 @keyframes unpack_bolezni{
-	from{height: 25vh;}
-	to{height: 65vh;}
+	from{height: 5vh;}
+	to{height: 90vh;}
 }
 @keyframes pack_bolezni{
-	from{height: 65vh;}
-	to{height: 25vh;}
+	from{height: 90vh;}
+	to{height: 5vh;}
 }
 #bolezni_list{
 	margin-top: 40px;
@@ -195,7 +206,12 @@ body{
 @keyframes scale1{
 	0%{transform: scaleY(0); opacity: 0;}
 	100%{transform: scale(1); opacity: 1;}
-}@keyframes scale0{
+}
+@keyframes scale0{
 	0%{transform: scaleY(1); opacity: 1;}
 	100%{transform: scale(0); opacity: 0;}
+}
+@keyframes RemovePopup{
+	0%{opacity: 1; transform: translateY(0);}
+	100%{opacity: 0; display: none; transform: translateY(-8vh);}
 }
