--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body{
 	#background: gray;
 	margin: 0;
 	padding: 0;
+	overflow-x: hidden;
 }
 #input_zone{
 	position: relative;
@@ -24,7 +25,7 @@ body{
 .popup_message{
 	z-index: 10;
 	position: absolute;
-	height: 7vh;
+	min-height: 7vh;
 	width: 95vw;
 	margin-top: 2.5%;
 	margin-left: 2.5%;
@@ -45,7 +46,7 @@ body{
 	height: 4px;
 	width: 100%;
 	bottom: -4px;
-	background: var(--accent3);
+	background: var(--accent2);
 	animation: popupdur 2s ease-in-out;
 }
 @keyframes popupdur{
@@ -54,13 +55,13 @@ body{
 }
 .popup_text{
 	z-index: 10;
-	line-height: 14pt;
+	margin: 0;
 	color: white;
 	font-size: 14pt;
-	margin-bottom: 50px;
 	text-align: center;
 	width: 100%;
 	height: 100%;
+	margin-top: 5px;
 }
 
 #Settings a{
