--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body{
 	#background: gray;
 	margin: 0;
 	padding: 0;
-	overflow-x: hidden;
+	#overflow-x: hidden;
 }
 #input_zone{
 	position: relative;
