--- a/css/settings.css
+++ b/css/settings.css
@@ -8,9 +8,9 @@
     opacity: 0;
 }
 .SettingsHeader{
-    padding-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-top: 4%;
+    padding-left: 4%;
+    padding-right: 4%;
     display: flex;
     justify-content: space-between;
 }
