--- a/css/simptomes.css
+++ b/css/simptomes.css
@@ -10,6 +10,10 @@
 body{
 	overflow-x: none;
 }
+#tutor1{
+	width: 100%;
+	margin-left: 10%;
+}
 .simptomes_textarea{
 	transition: .3s;
 	border: none;
@@ -26,7 +30,6 @@ body{
 	white-space: nowrap;
 	width: 90%;
 	margin-top: 5px;
-	#padding-left: 10%;
 	font-size: 14pt;
 }
 .simptomes::-webkit-scrollbar-thumb{
@@ -41,6 +44,15 @@ body{
 	background: transparent;
 	margin-top: 10px;
 	height: 4px;
+}
+#block_with_list_bolezni::-webkit-scrollbar-thumb{
+	background: red;
+}
+#block_with_list_bolezni::-webkit-scrollbar-track{
+	background: red;
+}
+#block_with_list_bolezni::-webkit-scrollbar-thumb{
+	background: red;
 }
 .simptomes div:not(:last-child){
 	margin-right: 5px;
@@ -128,7 +140,6 @@ body{
 #spisok_blyat{
 	margin-top: 50px;
 	overflow-x: scroll;
-	#background: red;
 	height: calc(100% - 50px);
 }
 #block_with_list_bolezni{
